JSW Devsb/src/objects/Business_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account_Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Partners</relationshipLabel>
        <relationshipName>Business_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code_Data__c</fullName>
        <label>Company Code Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Business Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Grp__c</fullName>
        <label>Customer Grp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_No_Bussiness__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distinct__c</fullName>
        <label>Distinct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Business Partners</relationshipLabel>
        <relationshipName>Business_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <label>Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name4__c</fullName>
        <label>Name4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1__c</fullName>
        <label>Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2__c</fullName>
        <label>Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Account__c</fullName>
        <label>Recon Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_TEXT__c</fullName>
        <label>STATE TEXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <label>Sales Area Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_text__c</fullName>
        <label>Sales District text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group_text__c</fullName>
        <label>Sales Group text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_text__c</fullName>
        <label>Sales Office text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <defaultValue>TEXT(3000)</defaultValue>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street3__c</fullName>
        <label>Street3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_No__c</fullName>
        <label>Tax No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Godown_Capacity__c</fullName>
        <label>Total Godown Capacity(MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Potential_Quantity_MT__c</fullName>
        <label>Total Potential Quantity(MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Products__c</fullName>
        <label>Type of Products</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wedding_Anniversary__c</fullName>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Partner</label>
    <listViews>
        <fullName>All_Business_Partners</fullName>
        <columns>ExternalId__c</columns>
        <columns>NAME</columns>
        <columns>Customer_Code__c</columns>
        <columns>Account__c</columns>
        <columns>Sold_to_Code__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Bodhtree</value>
        </filters>
        <label>All Business Partners</label>
    </listViews>
    <listViews>
        <fullName>Sub_Dealers</fullName>
        <columns>NAME</columns>
        <columns>Account_Group__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>Name_1__c</columns>
        <columns>Sales_District__c</columns>
        <columns>SAP_Code__c</columns>
        <columns>Sold_to_Code__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Distinct__c</columns>
        <columns>Customer_No_Bussiness__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Group__c</field>
            <operation>equals</operation>
            <value>YSUB</value>
        </filters>
        <label>Sub Dealers</label>
    </listViews>
    <nameField>
        <label>Business Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Partners</pluralLabel>
    <recordTypes>
        <fullName>MMC</fullName>
        <active>true</active>
        <label>MMC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Employee</fullName>
        <active>true</active>
        <label>Sales Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Promoters</fullName>
        <active>true</active>
        <label>Sales Promoters</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Dealers</fullName>
        <active>true</active>
        <label>Sub-Dealers</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Sales_Org</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE(Sales_Org__c)  &lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Sales_Org__c</errorDisplayField>
        <errorMessage>Sales Org Default value is 3000</errorMessage>
    </validationRules>
</CustomObject>